<resources>
    <string name="app_name">Maity\'s</string>
    <string name="Key">rzp_test_ADTjttKoCWTfXq</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Dashboard">Dashboard</string>
    <string name="DASHBOARD">DASHBOARD</string>
    <string name="Pleaseselect">Please select your purpose</string>
    <string name="Name">Name :</string>
    <string name="name">Name</string>
    <string name="Contactnumber">Contact number</string>
    <string name="Selectgender">Select gender</string>
    <string name="Email">Email ID</string>
    <string name="email">Email </string>
    <string name="Alreadyanuser">Already an user ?</string>
    <string name="Pleaselogin">Please login from here.</string>
    <string name="Selectstate">Select state</string>
    <string name="Selectservice">Select your service area</string>
    <string name="Selectcity">Select city</string>

    <string name="EnterPIN">Enter PIN</string>
    <string name="EnterPincode">Enter Pincode</string>
    <string name="DOB">Date of Birth</string>
    <string name="Gender">Gender</string>
    <string name="SelectState">SELECT STATE</string>
    <string name="SelectCity">SELECT CITY</string>
    <string name="SelectService">SELECT SERVICE AREA</string>

    <string name="Uploadyourrequirement">Upload your requirement (Image/PDF)</string>
    <string name="BrowseImagePDF">Browse Image/PDF</string>
    <string name="Upload">Upload</string>
    <string name="Attachmentone">Attachment one</string>
    <string name="SERVICEUSER">SERVICE USER</string>
    <string name="SERVICEPROVIDER">SERVICE PROVIDER</string>
    <string name="Next">Next</string>
    <string name="Login">Login</string>
    <string name="login">login</string>
    <string name="pick_file">Pick file</string>
    <string name="Contact">Contact Number :</string>
    <string name="Address">Address :</string>
    <string name="Note">Note</string>
    <string name="Enteraddress">Enter address</string>
    <string name="Notes">Note : </string>
    <string name="Pleaseapply"> Please apply here by filling the below form.
    </string>
    <string name="ourteam">our team will get back to you with in 24 hours.</string>
    <string name="enteramount">Please enter your amount</string>
    <string name="Sqft">Sqft. Area</string>
    <string name="Disinfectant">Disinfectant</string>
    <string name="disinfectant">Disinfectant : </string>
    <string name="Deep">Deep Cleaning</string>
    <string name="Normal">Normal Cleaning</string>
    <string name="Rewared">Rewared</string>
    <string name="Not">Not Rewarded</string>
    <string name="CleaningCategory">Cleaning Category : </string>
    <string name="Square">Square Feet : </string>
    <string name="PAYMENTDETAILS">PAYMENT DETAILS</string>
    <string name="paywallet">Pay from wallet</string>
    <string name="payonline">Pay online</string>
    <string name="Service">Service Charge</string>
    <string name="Total">Total Amount</string>
    <string name="Congratulation">Congratulation !</string>
    <string name="GroceryDelivery">Grocery Delivery</string>
    <string name="Cleaning">Cleaning</string>
    <string name="Plumbing">Plumbing</string>
    <string name="Nest">Nest Care Dishes</string>
    <string name="Repairing">Repairing</string>
    <string name="Laundry">Laundry</string>
    <string name="PestControl">Pest Control</string>
    <string name="Entermobile">Enter mobile number</string>
    <string name="Enterpassword">Enter mobile password</string>
    <string name="Defaultpassword">Default password : 123456</string>
   <string name="Additional">Additional info</string>
    <string name="BHIM">BHIM UPI</string>
    <string name="DEBITCARD">DEBIT CARD</string>
    <string name="Verifyingmobile">Verifying mobile number</string>
    <string name="HouseHold">House Hold</string>
    <string name="Spiritual">Spiritual</string>
    <string name="CREDITCARD">CREDIT CARD</string>
    <string name="StateBank">State Bank of India - 2563</string>
    <string name="AxisBank">Axis Bank - 0652</string>
    <string name="useanother">Use another BHIM UPI ID</string>
    <string name="WalletBalance">Wallet Balance</string>
    <string name="Thankyou">Thank you for place\nthe order.\nOur service team\nwill contact you.</string>

    <string name="cleaning_name">Lorem ipsum is simply dummy text of the printing and typesetting
        industry.Lorem ipsum has been the industry standard dummy textever since the 1500s,when an unknown
        printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="Chooseimagefrom">Choose image from</string>
    <string name="Selectgallery">Select photo from gallery</string>
    <string name="Capturecamera">Capture photo from camera</string>
    <string name="UploadPDF">Upload PDF</string>
</resources>