<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.main.MainActivity"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <include
        layout="@layout/maityspositiveliving_icon_layout"
        ></include>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Pleaseselect"
        android:textColor="#fff"
        android:layout_gravity="center"
        android:textSize="@dimen/_15sdp"
        android:fontFamily="@font/rajdhanimedium"
        android:gravity="center"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_5sdp">

    </TextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">



        <LinearLayout
            android:id="@+id/serviceuserid"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:background="@drawable/serviceuser"
            android:layout_marginLeft="@dimen/_28sdp"
            android:layout_marginRight="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_35sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/SERVICEUSER"
                android:textColor="@color/text_color_dark_blue"
                android:textSize="@dimen/_22sdp"
                android:fontFamily="@font/rajdhanibold"
                android:gravity="center"
                android:layout_marginLeft="@dimen/_70sdp"
                >

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/serviceproviderid"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:background="@drawable/serviceprovider"
            android:layout_marginLeft="@dimen/_28sdp"
            android:layout_marginRight="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_below="@+id/serviceuserid">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/SERVICEPROVIDER"
                android:textColor="@color/text_color_dark_blue"
                android:textSize="@dimen/_22sdp"
                android:fontFamily="@font/rajdhanibold"
                android:gravity="center"
                android:layout_marginLeft="@dimen/_70sdp"
                >

            </TextView>


        </LinearLayout>
    </LinearLayout>

</LinearLayout>