<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/onlybg"
    tools:context=".screen.ServiceProviderActivity.ServiceProviderActivity">

    <include
        layout="@layout/backbtn_wthbg_layout"
        ></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/white_bg"
        android:orientation="vertical">
        >
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="@dimen/_23sdp"
                android:layout_marginLeft="@dimen/_23sdp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_gravity="center"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Notes"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/text_color_sky"
                    android:fontFamily="@font/rajdhanisemibold"
                   >

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pleaseapply"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/text_color_light_blak"
                    android:fontFamily="@font/rajdhanisemibold"
                    android:paddingLeft="@dimen/_4sdp">

                </TextView>
            </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ourteam"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/text_color_light_blak"
                    android:fontFamily="@font/rajdhanisemibold"
                    android:paddingBottom="@dimen/_3sdp"
                    android:layout_gravity="center"
                    android:paddingLeft="@dimen/_4sdp">

                </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:fontFamily="@font/rajdhanisemibold"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/text_color_light_blak"
                android:layout_marginTop="@dimen/_10sdp">

            </TextView>

            <EditText
                android:id="@+id/etn_nameid"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/sky_capsul_bg"
                android:inputType="text|textNoSuggestions"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:textColor="@color/text_color_light_blak"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/rajdhanimedium"
                android:layout_marginBottom="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:paddingLeft="@dimen/_10sdp"
                >
            </EditText>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/rajdhanisemibold"
                    android:textColor="@color/text_color_light_blak"
                    >

                </TextView>

                <EditText
                    android:id="@+id/etn_emailid"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/sky_capsul_bg"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/text_color_light_blak"
                    android:fontFamily="@font/rajdhanimedium"
                    android:paddingLeft="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    >
                </EditText>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Contactnumber"
                    android:fontFamily="@font/rajdhanisemibold"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/text_color_light_blak">

                </TextView>

                <EditText
                    android:id="@+id/etn_mobno"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/sky_capsul_bg"
                    android:textStyle="normal"
                    android:textSize="@dimen/_12sdp"
                    android:digits="0123456789"
                    android:imeOptions="actionDone"
                    android:textColor="@color/text_color_light_blak"
                    android:gravity="center|left"
                    android:layout_gravity="center"
                    android:paddingLeft="@dimen/_9sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:fontFamily="@font/rajdhanimedium"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:lines="1"
                    android:layout_marginBottom="@dimen/_18sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    >

                </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_rounded_rectangle_border_black">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/Selectgender"
                    android:fontFamily="@font/rajdhanisemibold"
                    android:textSize="@dimen/_12sdp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_15sdp"
                    android:textColor="@color/text_color_light_blak">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                   >
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5">
                        <ImageView
                            android:id="@+id/male_ivid"
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:background="@drawable/outline">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="Male"
                            android:textColor="@color/text_color_light_blak"
                            android:fontFamily="@font/rajdhanisemibold"
                            android:textSize="@dimen/_12sdp"
                            android:paddingLeft="@dimen/_5sdp"
                            >

                        </TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6">
                        <ImageView
                            android:id="@+id/female_ivid"
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:background="@drawable/outline">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="Female"
                            android:textColor="@color/text_color_light_blak"
                            android:fontFamily="@font/rajdhanisemibold"

                            android:textSize="@dimen/_12sdp"
                            android:paddingLeft="@dimen/_5sdp"
                            >

                        </TextView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5">

                        <ImageView
                            android:id="@+id/other_ivid"
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:background="@drawable/outline">

                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="Other"
                            android:textColor="@color/text_color_light_blak"
                            android:textSize="@dimen/_12sdp"
                            android:paddingLeft="@dimen/_5sdp"
                            android:fontFamily="@font/rajdhanisemibold"
                            >

                        </TextView>

                    </LinearLayout>




                </LinearLayout>

            </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Selectservice"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/rajdhanisemibold"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:textColor="@color/text_color_light_blak"
                    >

                </TextView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/sky_capsul_bg"
                    android:fontFamily="@font/productsansregular"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/tv_state"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:gravity="center|left"
                            android:textColor="@color/text_color_light_blak"
                            android:paddingLeft="@dimen/_10sdp"
                            >

                        </TextView>
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/img_state"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="match_parent"
                        android:src="@drawable/arrow"
                        android:padding="@dimen/_12sdp">

                    </ImageView>

                </LinearLayout>


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/shadowdivider"
                    android:layout_marginTop="@dimen/_15sdp">

                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color_dark_blue"
                    android:text="@string/Additional"
                    android:fontFamily="@font/rajdhanibold"
                    android:textSize="@dimen/_16sdp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_8sdp">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Enteraddress"
                    android:paddingBottom="@dimen/_4sdp"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/rajdhanisemibold"
                    android:textColor="@color/text_color_light_blak"
                    >

                </TextView>

                <EditText
                    android:id="@+id/etn_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sky_capsul_bg"
                    android:textStyle="normal"
                    android:fontFamily="@font/rajdhanimedium"
                    android:textSize="@dimen/_12sdp"
                    android:paddingLeft="@dimen/_9sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:paddingTop="@dimen/_9sdp"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:minLines="4"
                    android:gravity="top|left"
                    android:maxLines="10"
                    android:scrollbars="vertical"
                    android:layout_marginBottom="@dimen/_15sdp"
                    >

                </EditText>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/EnterPincode"
                    android:textColor="@color/text_color_light_blak"
                    android:fontFamily="@font/rajdhanisemibold"
                    android:textSize="@dimen/_12sdp"
                    >
                </TextView>



                <EditText
                    android:id="@+id/pin_etnid"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/sky_capsul_bg"
                    android:inputType="number"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:textSize="@dimen/_12sdp"

                    android:textColor="@color/text_color_light_blak"
                    android:fontFamily="@font/rajdhanimedium"
                    android:paddingLeft="@dimen/_10sdp"
                    >
                </EditText>

                <LinearLayout
                    android:id="@+id/lv_submit"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_45sdp"
                    android:background="@drawable/submitbg"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_30sdp">

                    <TextView
                        android:id="@+id/tv_place_order"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:fontFamily="@font/rajdhanibold"
                        android:gravity="center"
                        android:text="Submit"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_20sdp">

                    </TextView>

                </LinearLayout>

            </LinearLayout>




        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</LinearLayout>